--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,8 @@
     <title>Document Title</title>
 </head>
 <body>
-    <!-- Your content goes here -->
-    <h1>Hello, World!</h1>
-    <p>This is a basic HTML page.</p>
+    <div id="MainHeader">
+        <h1>hello</h1>
+    </div>
 </body>
 </html>
