--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Title</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="MainHeader">
-        <h1>hello</h1>
+    <div id="header">
+        <p>hello</p>
+        <p>hello</p>
     </div>
 </body>
 </html>
