--- a/content/reviews.html
+++ b/content/reviews.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Title</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Community</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
     <div id="header">
-        <script src="/header/header.js"></script>
-        <p>hello</p>
+        <script src="../header/header.js"></script>
     </div>
+    <a href="../index.html">hello</a>
 </body>
 </html>
